add wrapper/entrypoint executable named 'mkvtoolnix'

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@
 /src/mkvinfo-gui
 /src/mkvmerge
 /src/mkvpropedit
+/src/mkvtoolnix/mkvtoolnix
 /src/mkvtoolnix-gui/forms/**/*.h
 /src/mkvtoolnix-gui/mkvtoolnix-gui
 /src/mkvtoolnix-gui/mkvtoolnix-gui.pro.user*
