only build the mkvtoolnix wrapper binary if enabled via configure

--- a/build-config.in
+++ b/build-config.in
@@ -142,6 +142,7 @@ USE_ADDRSAN = @USE_ADDRSAN@
 USE_UBSAN = @USE_UBSAN@
 USE_DVDREAD = @USE_DVDREAD@
 BUILD_GUI = @BUILD_GUI@
+BUILD_MKVTOOLNIX = @BUILD_MKVTOOLNIX@
 BUILD_COMPILATION_DATABASE = no
 
 TRANSLATIONS = @TRANSLATIONS@
