--- a/packaging/debian/rules
+++ b/packaging/debian/rules
@@ -32,10 +32,17 @@ endif
 # gcc 10 in Debian 11 Bullseye contains a bug that causes an
 # "internal compiler error" segfault. Workaround: compile with
 # clang.
+
+# Additionally the version of the fmt library in Debian 11 on at least
+# armhf has a bug with a simple format such as fmt::format("{}",
+# fmt::join(range, separator)). Therefore build with the internal
+# copy.
+
 	if grep -qr bullseye /etc/apt/sources.list*; then \
 	  dh_auto_configure -- CC=/usr/bin/clang CXX=/usr/bin/clang++ \
 	    --docdir='$${datarootdir}/doc/mkvtoolnix-gui' \
 	    --enable-debug --enable-optimization ; \
+	  perl -pi -e 's/FMT_INTERNAL *=.*/FMT_INTERNAL = yes/' build-config ; \
 	else \
 	  dh_auto_configure -- --docdir='$${datarootdir}/doc/mkvtoolnix-gui' \
 	    --enable-debug --enable-optimization ; \
