build system: use po4a directly instead of po4a-translate for each language

--- a/doc/man/po4a/po4a.cfg
+++ b/doc/man/po4a/po4a.cfg
@@ -1,24 +1,11 @@
-[po4a_paths] doc/man/po4a/po/mkvtoolnix.pot \
-  bg:doc/man/po4a/po/bg.po \
-  ca:doc/man/po4a/po/ca.po \
-  de:doc/man/po4a/po/de.po \
-  es:doc/man/po4a/po/es.po \
-  fr:doc/man/po4a/po/fr.po \
-  it:doc/man/po4a/po/it.po \
-  ja:doc/man/po4a/po/ja.po \
-  ko:doc/man/po4a/po/ko.po \
-  nl:doc/man/po4a/po/nl.po \
-  pl:doc/man/po4a/po/pl.po \
-  ru:doc/man/po4a/po/ru.po \
-  uk:doc/man/po4a/po/uk.po \
-  zh_CN:doc/man/po4a/po/zh_CN.po \
-  zh_TW:doc/man/po4a/po/zh_TW.po
+[po_directory] doc/man/po4a/po/
 
 [type: docbook] doc/man/mkvextract.xml              $lang:doc/man/$lang/mkvextract.xml
 [type: docbook] doc/man/mkvinfo.xml                 $lang:doc/man/$lang/mkvinfo.xml
 [type: docbook] doc/man/mkvmerge.xml                $lang:doc/man/$lang/mkvmerge.xml
 [type: docbook] doc/man/mkvpropedit.xml             $lang:doc/man/$lang/mkvpropedit.xml
 [type: docbook] doc/man/mkvtoolnix-gui.xml          $lang:doc/man/$lang/mkvtoolnix-gui.xml
+# [type: docbook] doc/man/mkvtoolnix.xml              $lang:doc/man/$lang/mkvtoolnix.xml
 
 [type: xml]     doc/stylesheets/toc.xsl             $lang:doc/man/$lang/toc.xsl
 [type: xml]     doc/stylesheets/cmdsynopsis.xsl     $lang:doc/man/$lang/cmdsynopsis.xsl
