--- a/build-config.in
+++ b/build-config.in
@@ -98,6 +98,7 @@ FMT_INTERNAL = @FMT_INTERNAL@
 GOOGLE_BENCHMARK = @GOOGLE_BENCHMARK@
 GTEST_TYPE = @GTEST_TYPE@
 LDFLAGS_RPATHS = @LDFLAGS_RPATHS@
+FLAC_CFLAGS = @FLAC_CFLAGS@
 FLAC_LIBS = @FLAC_LIBS@
 ICONV_LIBS = @ICONV_LIBS@
 LIBINTL_LIBS = @LIBINTL_LIBS@
