--- a/build-config.in
+++ b/build-config.in
@@ -76,7 +76,9 @@ WINDRES = @WINDRES@
 
 # Variable stuff as set by configure
 BOOST_CPPFLAGS = @BOOST_CPPFLAGS@
+BOOST_FILESYSTEM_LIB = @BOOST_FILESYSTEM_LIB@
 BOOST_LDFLAGS = @BOOST_LDFLAGS@
+BOOST_SYSTEM_LIB = @BOOST_SYSTEM_LIB@
 CMARK_CFLAGS = @CMARK_CFLAGS@
 CMARK_LIBS = @CMARK_LIBS@
 COMPILER_TYPE = @COMPILER_TYPE@
