--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,8 @@ m4_include(ac/cmark.m4)
 m4_include(ac/gnurx.m4)
 m4_include(ac/ax_boost_base.m4)
 m4_include(ac/ax_boost_check_headers.m4)
+m4_include(ac/ax_boost_filesystem.m4)
+m4_include(ac/ax_boost_system.m4)
 m4_include(ac/boost.m4)
 m4_include(ac/gtest.m4)
 m4_include(ac/benchmark.m4)
