GUI: use external resource file for Qt resources
The resource file has reached a size at which the C++ compiler
exhausts available virtual memory on some 32-bit architectures.

On Windows & macOS the GUI will look for the file in
`<folder_with_executables>/data/qt_resources.rcc`, and in the
directory set with `configure`'s `--datadir` parameter on other
systems (which usually means `/usr/share/mkvtoolnix`). The `install`
build system commands installs it into that folder.

--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,7 @@
 /share/icons/*/*.h
 /share/icons/**/*.svg
 /src/*/manifest.xml
-/src/*/qt_resources.cpp
+/src/*/qt_resources.rcc
 /src/benchmark/
 /src/common/common.h.gch
 /src/common/common_pch.h.[gp]ch
