ignore Qt Project build directory

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@
 /src/*/manifest.xml
 /src/*/qt_resources.rcc
 /src/benchmark/
+/src/build-mkvtoolnix-gui-Desktop-Debug
 /src/common/common.h.gch
 /src/common/common_pch.h.[gp]ch
 /src/common/common_pch.h.pch-????????
