more renaming of xvc_dump to xyzvc_dump

--- a/.gitignore
+++ b/.gitignore
@@ -100,7 +100,7 @@
 /src/tools/hevcc_dump
 /src/tools/pgs_dump
 /src/tools/vc1parser
-/src/tools/xvc_dump
+/src/tools/xyzvc_dump
 /tests/data
 /tests/unit/common/common
 /tests/unit/merge/merge
