add tool for dumping Dolby Vision decoder configuration records

--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,7 @@
 /src/tools/bluray_dump
 /src/tools/checksum
 /src/tools/diracparser
+/src/tools/dovic_dump
 /src/tools/dts_dump
 /src/tools/ebml_validator
 /src/tools/hevcc_dump
