--- a/configure.ac
+++ b/configure.ac
@@ -34,6 +34,8 @@ m4_include(ac/utf8cpp.m4)
 m4_include(ac/fmt.m4)
 m4_include(ac/zlib.m4)
 m4_include(ac/qt6.m4)
+m4_include(ac/qt5.m4)
+m4_include(ac/qt_common.m4)
 m4_include(ac/cmark.m4)
 m4_include(ac/gnurx.m4)
 m4_include(ac/ax_boost_base.m4)
