po4a config: fix quoting

--- a/doc/man/po4a/po4a.cfg
+++ b/doc/man/po4a/po4a.cfg
@@ -1,5 +1,5 @@
 [po_directory] doc/man/po4a/po/
-[options] opt:"-o attributes=\"<a>title\""
+[options] opt:"-o attributes=<a>title"
 
 [type: docbook] doc/man/mkvextract.xml              $lang:doc/man/$lang/mkvextract.xml
 [type: docbook] doc/man/mkvinfo.xml                 $lang:doc/man/$lang/mkvinfo.xml
