configure: query `pkg-config` for flags & libraries for gtest
See #3696

--- a/build-config.in
+++ b/build-config.in
@@ -98,6 +98,8 @@ EXTRA_CFLAGS = @EXTRA_CFLAGS@
 EXTRA_LDFLAGS = @EXTRA_LDFLAGS@
 FMT_INTERNAL = @FMT_INTERNAL@
 GOOGLE_BENCHMARK = @GOOGLE_BENCHMARK@
+GTEST_CFLAGS = @GTEST_CFLAGS@
+GTEST_LIBS = @GTEST_LIBS@
 GTEST_TYPE = @GTEST_TYPE@
 LDFLAGS_RPATHS = @LDFLAGS_RPATHS@
 FLAC_CFLAGS = @FLAC_CFLAGS@
