MSIX asset generation: use magick command introduced in ImageMagick 7

--- a/build-config.in
+++ b/build-config.in
@@ -108,6 +108,7 @@ ICONV_LIBS = @ICONV_LIBS@
 LIBINTL_LIBS = @LIBINTL_LIBS@
 LINK_STATICALLY=@LINK_STATICALLY@
 LLVM_LLD = @LLVM_LLD@
+MAGICK = @MAGICK@
 MINGW_GUIAPP = @MINGW_GUIAPP@
 MINGW_LIBS = @MINGW_LIBS@
 MINGW_PROCESSOR_ARCH = @MINGW_PROCESSOR_ARCH@
