Rakefile: require files from `rake.d/local.d` but don't store them in git

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@
 /po/mkvtoolnix.pot
 /po/qt/*.qm
 /rake.d/dependency.d
+/rake.d/local.d
 /share/icons/*/*.h
 /share/icons/**/*.svg
 /src/*/manifest.xml
